--- a/data/geany.glade
+++ b/data/geany.glade
@@ -7320,7 +7320,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file name</property>
+                    <property name="label">file name</property>
                     <property name="selectable">True</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
@@ -7363,7 +7363,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file type</property>
+                    <property name="label">file type</property>
                     <property name="selectable">True</property>
                   </object>
                   <packing>
@@ -7481,7 +7481,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file size</property>
+                    <property name="label">file size</property>
                     <property name="selectable">True</property>
                   </object>
                   <packing>
@@ -7496,7 +7496,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file path</property>
+                    <property name="label">file path</property>
                     <property name="selectable">True</property>
                   </object>
                   <packing>
@@ -7529,7 +7529,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file encoding</property>
+                    <property name="label">file encoding</property>
                     <property name="selectable">True</property>
                   </object>
                   <packing>
@@ -7544,7 +7544,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file mdate</property>
+                    <property name="label">file mdate</property>
                     <property name="selectable">True</property>
                   </object>
                   <packing>
@@ -7559,7 +7559,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file cdate</property>
+                    <property name="label">file cdate</property>
                     <property name="selectable">True</property>
                   </object>
                   <packing>
@@ -7574,7 +7574,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">file adate</property>
+                    <property name="label">file adate</property>
                     <property name="selectable">True</property>
                   </object>
                   <packing>
