--- a/data/templates/files/file.html
+++ b/data/templates/files/file.html
@@ -1,11 +1,10 @@
 {fileheader}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+	<meta charset="utf-8" />
 	<title>{untitled}</title>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<meta name="generator" content="{geanyversion}" />
 </head>
 
