--- a/data/geany.glade
+++ b/data/geany.glade
@@ -8187,11 +8187,37 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkNotebook" id="notebook1">
+                  <object class="GtkHPaned" id="hpaned2">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="scrollable">True</property>
-                    <signal name="switch-page" handler="on_notebook1_switch_page_after" after="yes" swapped="no"/>
+                    <child>
+                      <object class="GtkNotebook" id="notebook1">
+                        <property name="width_request">10</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="scrollable">True</property>
+                        <signal name="switch-page" handler="on_notebook1_switch_page_after" after="yes" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="resize">True</property>
+                        <property name="shrink">False</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkNotebook" id="notebook7">
+                        <property name="width_request">10</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="scrollable">True</property>
+                        <signal name="switch-page" handler="on_notebook1_switch_page_after" after="yes" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="resize">True</property>
+                        <property name="shrink">False</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="resize">True</property>
